<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:title="@string/home_menu" />
        <item
            android:id="@+id/nav_search"
            android:title="@string/search_menu" />
        <item
            android:id="@+id/nav_history"
            android:title="@string/history_menu" />
        <item
            android:id="@+id/nav_todo"
            android:title="@string/todo_menu" />
        <item
            android:id="@+id/nav_push"
            android:title="@string/push_updates_menu" />

        <item
            android:id="@+id/nav_report"
            android:title="@string/report_menu" />
    </group>

    <item android:title="@string/other_menu">
        <menu>
            <item
                android:id="@+id/nav_support"
                android:title="@string/support_menu" />
            <item
                android:id="@+id/nav_about"
                android:title="@string/about_menu" />

            <item
                android:id="@+id/nav_share"
                android:title="@string/share_app_menu" />
        </menu>
    </item>

</menu>
