<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <TextView
        android:id="@+id/tv_title"
        android:layout_width="230dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:gravity="center"
        android:text="@string/report_menu"
        android:layout_centerInParent="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="30dp"
        android:textColor="@color/colorHeader"
        android:textSize="28sp"
        android:textStyle="bold" />




    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical">

        <Button
            android:id="@+id/tv_statistics"
            android:layout_width="230dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:background="@color/colorHeader"
            android:gravity="center"
            android:text="@string/statistics"
            android:textColor="@color/colorWhite"
            android:textSize="18sp"
            android:textStyle="bold" />


        <Button
            android:id="@+id/tv_prorities"
            android:layout_width="230dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="40dp"
            android:background="@color/colorHeader"
            android:gravity="center"
            android:text="@string/priorities"
            android:textColor="@color/colorWhite"
            android:textSize="18sp"
            android:textStyle="bold" />



        <Button
            android:id="@+id/btn_back"
            android:layout_width="230dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="40dp"
            android:background="@color/colorHeader"
            android:gravity="center"
            android:text="@string/back"
            android:textColor="@color/colorWhite"
            android:textSize="18sp"
            android:textStyle="bold" />


    </LinearLayout>




</RelativeLayout>