<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:text="@string/push_updates_menu"
            android:textColor="@color/colorAccent"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="30dp"
            android:gravity="center"
            android:text="@string/title"
            android:textColor="@color/colorBlack"
            android:textSize="16sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/edt_title"
            style="@style/EditTextStyle"
            android:layout_height="40dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="10dp"
            android:layout_weight="1"
            android:inputType="text"
            android:minLines="2"
            android:singleLine="true"
            android:textSize="16sp" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="30dp"
            android:gravity="center"
            android:text="@string/description"
            android:textColor="@color/colorBlack"
            android:textSize="16sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/edt_description"
            style="@style/EditTextStyle"
            android:layout_height="200dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="10dp"
            android:layout_weight="1"
            android:gravity="top|left"
            android:inputType="textMultiLine"
            android:lines="8"
            android:maxLines="10"
            android:minLines="6"
            android:singleLine="true"
            android:textSize="16sp" />



        <Button
            android:layout_gravity="center"
            android:layout_marginTop="40dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:id="@+id/btn_attach_file"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@drawable/btn_border"
            android:text="@string/attach_file"
            android:textSize="16sp"
            android:gravity="center"
            android:textColor="@color/colorWhite"
            />


        <LinearLayout
            android:orientation="horizontal"
            android:layout_weight="2"
            android:layout_margin="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <Button
                android:layout_weight="1"
                android:layout_gravity="center"
                android:id="@+id/btn_back"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@drawable/btn_border"
                android:text="@string/back"
                android:textSize="16sp"
                android:layout_marginRight="10dp"
                android:gravity="center"
                android:textColor="@color/colorWhite"
                />

            <Button
                android:layout_weight="1"
                android:layout_gravity="center"
                android:id="@+id/btn_publish"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@drawable/btn_border"
                android:text="@string/publish"
                android:textSize="16sp"
                android:layout_marginLeft="10dp"
                android:gravity="center"
                android:textColor="@color/colorWhite"
                />

        </LinearLayout>


    </LinearLayout>
</ScrollView>